--- a/DEVOPS_DEMO/src/settings/Case.settings
+++ b/DEVOPS_DEMO/src/settings/Case.settings
@@ -9,9 +9,9 @@
         <feedItemType>EmailMessageEvent</feedItemType>
     </caseFeedItemSettings>
     <closeCaseThroughStatusChange>false</closeCaseThroughStatusChange>
-    <defaultCaseOwner>nick@lpl.com</defaultCaseOwner>
+    <defaultCaseOwner>nick@devops_prod.com</defaultCaseOwner>
     <defaultCaseOwnerType>User</defaultCaseOwnerType>
-    <defaultCaseUser>nick@lpl.com</defaultCaseUser>
+    <defaultCaseUser>nick@devops_prod.com</defaultCaseUser>
     <emailToCase>
         <enableEmailToCase>false</enableEmailToCase>
     </emailToCase>
